--- a/force-app/main/default/tests/CanTheUser_Tests.cls
+++ b/force-app/main/default/tests/CanTheUser_Tests.cls
@@ -14,11 +14,11 @@ private inherited sharing class CanTheUser_Tests {
     @isTest
     static void canCrudAccountCreatePositive() {
         System.assert(
-            new CanTheUser().crud(generateAccounts(), CanTheUser.CrudType.CREATE),
+            CanTheUser.crud(generateAccounts(), CanTheUser.CrudType.CREATE),
             'Unless scratch org defaults have been changed by the user, this test should pass - asserting that users can create accounts'
         );
         System.assert(
-            new CanTheUser().crud(new Account(), CanTheUser.CrudType.CREATE),
+            CanTheUser.crud(new Account(), CanTheUser.CrudType.CREATE),
             'Unless scratch org defaults have been changed by the user, this test should pass - asserting that users can create accounts'
         );
     }
@@ -26,11 +26,11 @@ private inherited sharing class CanTheUser_Tests {
     @isTest
     static void canCrudCreateAccountPositive() {
         System.assert(
-            new CanTheUser().create(generateAccounts()),
+            CanTheUser.create(generateAccounts()),
             'Unless scratch org defaults have been changed by the user, this test should pass - asserting that users can create accounts'
         );
         System.assert(
-            new CanTheUser().create(new Account()),
+            CanTheUser.create(new Account()),
             'Unless scratch org defaults have been changed by the user, this test should pass - asserting that users can create accounts'
         );
     }
@@ -38,11 +38,11 @@ private inherited sharing class CanTheUser_Tests {
     @isTest
     static void canCrudAccountReadPositive() {
         System.assert(
-            new CanTheUser().crud(generateAccounts(), CanTheUser.CrudType.READ),
+            CanTheUser.crud(generateAccounts(), CanTheUser.CrudType.READ),
             'Expected to be able to read accounts'
         );
         System.assert(
-            new CanTheUser().crud(new Account(), CanTheUser.CrudType.READ),
+            CanTheUser.crud(new Account(), CanTheUser.CrudType.READ),
             'Expected to be able to read accounts'
         );
     }
@@ -50,11 +50,11 @@ private inherited sharing class CanTheUser_Tests {
     @isTest
     static void canCrudReadAccountPositive() {
         System.assert(
-            new CanTheUser().read(generateAccounts()),
+            CanTheUser.read(generateAccounts()),
             'Expected to be able to read accounts'
         );
         System.assert(
-            new CanTheUser().read(new Account()),
+            CanTheUser.read(new Account()),
             'Expected to be able to read accounts'
         );
     }
@@ -62,11 +62,11 @@ private inherited sharing class CanTheUser_Tests {
     @isTest
     static void canCrudAccountUpdatePositive() {
         System.assert(
-            new CanTheUser().crud(generateAccounts(), CanTheUser.CrudType.EDIT),
+            CanTheUser.crud(generateAccounts(), CanTheUser.CrudType.EDIT),
             'Expected to be able to update accounts'
         );
         System.assert(
-            new CanTheUser().crud(new Account(), CanTheUser.CrudType.EDIT),
+            CanTheUser.crud(new Account(), CanTheUser.CrudType.EDIT),
             'Expected to be able to update accounts'
         );
     }
@@ -74,11 +74,11 @@ private inherited sharing class CanTheUser_Tests {
     @isTest
     static void canCrudEditAccountPositive() {
         System.assert(
-            new CanTheUser().edit(generateAccounts()),
+            CanTheUser.edit(generateAccounts()),
             'Expected to be able to update accounts'
         );
         System.assert(
-            new CanTheUser().edit(new Account()),
+            CanTheUser.edit(new Account()),
             'Expected to be able to update accounts'
         );
     }
@@ -86,11 +86,11 @@ private inherited sharing class CanTheUser_Tests {
     @isTest
     static void canCrudUpsertAccountPositive() {
         System.assert(
-            new CanTheUser().ups(generateAccounts()),
+            CanTheUser.ups(generateAccounts()),
             'Expected to be able to upsert accounts'
         );
         System.assert(
-            new CanTheUser().ups(new Account()),
+            CanTheUser.ups(new Account()),
             'Expected to be able to upsert accounts'
         );
     }
@@ -98,11 +98,11 @@ private inherited sharing class CanTheUser_Tests {
     @isTest
     static void canCrudAccountDeletePositive() {
         System.assert(
-            new CanTheUser().crud(generateAccounts(), CanTheUser.CrudType.DEL),
+            CanTheUser.crud(generateAccounts(), CanTheUser.CrudType.DEL),
             'Expected to be able to delete accounts'
         );
         System.assert(
-            new CanTheUser().crud(new Account(), CanTheUser.CrudType.DEL),
+            CanTheUser.crud(new Account(), CanTheUser.CrudType.DEL),
             'Expected to be able to delete accounts'
         );
     }
@@ -110,11 +110,11 @@ private inherited sharing class CanTheUser_Tests {
     @isTest
     static void canCrudDestroyAccountPositive() {
         System.assert(
-            new CanTheUser().destroy(generateAccounts()),
+            CanTheUser.destroy(generateAccounts()),
             'Expected to be able to delete accounts'
         );
         System.assert(
-            new CanTheUser().destroy(new Account()),
+            CanTheUser.destroy(new Account()),
             'Expected to be able to delete accounts'
         );
     }
@@ -122,7 +122,7 @@ private inherited sharing class CanTheUser_Tests {
     @isTest
     static void getFLSofAccountNamePositive() {
         System.assert(
-            new CanTheUser().flsAccessible('Account', 'Name'),
+            CanTheUser.flsAccessible('Account', 'Name'),
             'Expected the name field to be accesible on Account'
         );
     }
@@ -130,7 +130,7 @@ private inherited sharing class CanTheUser_Tests {
     @isTest
     static void getFLSofAccountIDNegative() {
         System.assert(
-            new CanTheUser().flsUpdatable('Account', 'id') == false,
+            CanTheUser.flsUpdatable('Account', 'id') == false,
             'Expected that the ID of an object cannot be updated.'
         );
     }
@@ -138,7 +138,7 @@ private inherited sharing class CanTheUser_Tests {
     @isTest
     static void getBulkFLSAccessibleWithAccountPositive() {
         Set<String> fields = new Set<String>{ 'name', 'id' };
-        Map<String, Boolean> bulkCheck = new CanTheUser().bulkFLSAccessible('Account', fields);
+        Map<String, Boolean> bulkCheck = CanTheUser.bulkFLSAccessible('Account', fields);
         for (String field : bulkCheck.keySet()) {
             System.assert(
                 bulkCheck.get(field),
@@ -150,7 +150,7 @@ private inherited sharing class CanTheUser_Tests {
     @isTest
     static void getBulkFLSAccessibleWithAccountPositiveWithNegativeResults() {
         Set<String> fields = new Set<String>{ 'name', 'nonExistingField__c' };
-        Map<String, Boolean> bulkCheck = new CanTheUser().bulkFLSAccessible('Account', fields);
+        Map<String, Boolean> bulkCheck = CanTheUser.bulkFLSAccessible('Account', fields);
 
         System.assert(
             bulkCheck.get('name'),
@@ -166,7 +166,7 @@ private inherited sharing class CanTheUser_Tests {
     @isTest
     static void getBulkFLSUpdatableWithAccountPositive() {
         Set<String> fields = new Set<String>{ 'name', 'ShippingStreet' };
-        Map<String, Boolean> bulkCheck = new CanTheUser().bulkFLSUpdatable('Account', fields);
+        Map<String, Boolean> bulkCheck = CanTheUser.bulkFLSUpdatable('Account', fields);
         for (String field : bulkCheck.keySet()) {
             System.assert(
                 bulkCheck.get(field),
@@ -178,7 +178,7 @@ private inherited sharing class CanTheUser_Tests {
     @isTest
     static void getBulkFLSUpdatableWithAccountPositiveWithNegativeResults() {
         Set<String> fields = new Set<String>{ 'name', 'nonExistingField__c' };
-        Map<String, Boolean> bulkCheck = new CanTheUser().bulkFLSUpdatable('Account', fields);
+        Map<String, Boolean> bulkCheck = CanTheUser.bulkFLSUpdatable('Account', fields);
 
         System.assert(
             bulkCheck.get('name'),
